syntax = "proto3";
package dotbpe;

option csharp_namespace = "Hangfire.Jobs";
option optimize_for = SPEED;




message CommonReq{
    string job_id = 1 ; //任务ID

    int32 service_id = 10; // 服务ID
    int32 message_id = 11; // 消息ID
    string data = 12;   //数据JSON 应该尽量少的传递数据，必要时可以传递ID，在实际执行是去获取数据
}

message VoidRes{
    string return_message = 1 ;
}
